# FinalProject-AI

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  api.py  model_loader.py  pyproject.toml  test.py  train_model.ipynb  web_controller.py
backend/db/: __init__.py  crud_base.py  crud_label.py  db.py  label_model.py  label_router.py  label_schema.py  orm_base.py  session.py  singleton.py
frontend/: About.py  Dockerfile  pyproject.toml
frontend/app/services/: __init__.py  url_label_service.py
frontend/pages/: List_of_websites.py  Websites_content.py
